# forgewire-fabric

./: .gitignore  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README-runtime.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: cluster.yaml
crates/fw-claim-router/: Cargo.toml
crates/fw-protocol/: Cargo.toml
crates/fw-py/: Cargo.toml  pyproject.toml
crates/fw-py/src/: lib.rs
crates/fw-streams/: Cargo.toml
docs/: EXTRACTION.md  POSITIONING.md  QUICKSTART.md
docs/operations/: chaos-drills.md  dr-rqlite-backups.md  service-install.md
python/forgewire/: __init__.py  cli.py  install.py
python/forgewire/_installer_assets/: nssm-install-hub.ps1
python/forgewire/dispatcher/: __init__.py  identity.py
python/forgewire/hub/: __init__.py  __main__.py  _crypto.py  _router.py  _streams.py  client.py  discovery.py  dispatcher_mcp.py  mcp_common.py  runner_mcp.py  schema.sql  server.py
python/forgewire/runner/: __init__.py  agent.py  identity.py  runner_capabilities.py  worktree.py
python/forgewire_fabric/: __init__.py  cli.py  install.py
python/forgewire_fabric/_installer_assets/: install-hub-watchdog.ps1  nssm-install-hub.ps1  nssm-install-runner.ps1
python/forgewire_fabric/cluster/: __init__.py  protocol.py  transport.py
python/forgewire_fabric/dispatcher/: identity.py
python/forgewire_fabric/hub/: _router.py  _rqlite_db.py  capability_matcher.py  client.py  (+5 more)
scripts/: bench_claim_router.py  bench_crypto.py  bench_streams.py  install_vsix_remote.ps1  live_smoke_approvals.py  live_smoke_secrets.py  start_hub.ps1  start_session.ps1  stop_hub.ps1  stop_session.ps1
scripts/dev/: probe_capability_routing.py
scripts/dr/: chaos_drills.ps1  install_rqlite_chaos_task.ps1  install_ssh_for_system.ps1
scripts/install/: install-host.ps1  install-hub-watchdog.ps1  install-runner-watchdog.ps1  nssm-install-agent-runner.ps1  nssm-install-hub.ps1  nssm-install-runner.ps1
tests/: test_alias_persistence.py  test_dispatcher_signing.py  test_forgewire_claim_router_parity.py  test_forgewire_runtime_parity.py  test_forgewire_streams_parity.py  test_hub_rqlite_e2e.py  test_installer_assets_in_sync.py  test_mcp_and_vscode_surface.py  test_rqlite_db_adapter.py  test_runner_dedupe.py  test_runner_startup_validation.py
tests/cluster/: test_inmemory_transport.py
tests/hub/: test_capability_routing.py  test_exception_chains.py  test_host_summaries.py  test_lifespan.py  test_routes_layout.py  test_secret_broker.py
tests/runner/: test_runner_kind_tag.py
tmp/: forgewire-fabric.vsix  probe.ps1
vscode/: README.md  package.json
vscode/src/: extension.ts  hubClient.ts  treeProviders.ts
(+12 files in other folders)
