# fw-py — PyO3 bindings exposing fw-protocol (and later fw-claim-router, fw-streams) to Python.

[package]
name = "fw-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgewire_runtime"
crate-type = ["cdylib"]

[dependencies]
fw-protocol.workspace = true
fw-claim-router.workspace = true
fw-streams.workspace = true
serde_json.workspace = true

pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
pythonize = "0.24"

[lints]
workspace = true
